# hobbes

./: .gitignore  Hobbes.hs  README.md  hobbes.cabal  stack.yaml
