name:                hobbes
version:             0.1.0.0
synopsis:            A small file watcher for OSX
-- description:         
homepage:            http://github.com/jhickner/hobbes
license:             BSD3
license-file:        LICENSE
author:              Jason Hickner
maintainer:          jhickner@gmail.com
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable hobbes
  main-is:             Hobbes.hs
  -- other-modules:       
  build-depends:       base ==4.5.*, 
                       filepath ==1.3.*, 
                       filemanip ==0.3.*, 
                       hfsevents ==0.1.*
