name:                hobbes
version:             0.2.2
synopsis:            A small file watcher for OSX
-- description:
homepage:            http://github.com/jhickner/hobbes
license:             BSD3
license-file:        LICENSE
author:              Jason Hickner
maintainer:          jhickner@gmail.com
-- copyright:
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable hobbes
  main-is:             Hobbes.hs
  -- other-modules:
  build-depends:       base >= 4 && < 5,
                       filepath ==1.3.*,
                       system-filepath >= 0.4.7,
                       filemanip ==0.3.*,
                       fsnotify >= 0.0.11,
                       text >= 1.1.0.1

